feat: S3 파일 업로드 기능 추가
- POST /files/presigned-url: 이미지 업로드를 위한 presigned-url을 발급받음

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -19,6 +19,15 @@ spring:
     init:
       mode: always
 
+aws:
+  s3:
+    bucket: ${BUCKET_NAME}
+  credentials:
+    access-key: ${AWS_ACCESS_KEY}
+    secret-key: ${AWS_SECRET_KEY}
+  region: ${BUCKET_REGION}
+
+
 logging:
   level:
     org.springframework.jdbc.core: DEBUG
