--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,8 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.12'
 
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+
+	implementation 'software.amazon.awssdk:s3:2.25.27'
 }
 
 tasks.named('test') {
