--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,34 @@
-# OS / editor junk
-.DS_Store
-Thumbs.db
-*.log
+# Environment variables
+.env
+.env.local
+.env.*.local
+env.example
+
+# Build artifacts
+backend/build/
+backend/.gradle/
+frontend/build/
+frontend/dist/
+frontend/node_modules/
+
+# IDE
 .idea/
 .vscode/
-
-# Root-level env/config
-.env
-
-# Backend artifacts
-backend/.gradle/
-backend/build/
-backend/bin/
-backend/out/
-backend/.apt_generated/
-backend/.classpath
-backend/.factorypath
-backend/.project
-backend/.settings/
-backend/.springBeans
-backend/.sts4-cache
-
-# Gradle wrapper extras
-backend/gradle-app.setting
-
-# Frontend artifacts
-frontend/node_modules/
-frontend/dist/
-frontend/.env
-frontend/.env.*
-!frontend/.env.example
-frontend/npm-debug.log*
-frontend/yarn-debug.log*
-frontend/yarn-error.log*
-frontend/pnpm-debug.log*
-
-# Testing / coverage
-frontend/coverage/
-
-# Misc
 *.iml
-*.ipr
-*.iws
+*.swp
+*.swo
+*~
 
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Deployment
+deploy/
+deploy.tar.gz
