--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
   application:
     name: cinecollector
   datasource:
-    url: jdbc:postgresql://localhost:5432/cinecollector
+    url: ${DB_URL:jdbc:postgresql://localhost:5432/cinecollector}
     driver-class-name: org.postgresql.Driver
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
