--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,45 @@ jobs:
           chmod 644 ~/.ssh/known_hosts || true
           
           echo "✅ SSH setup completed"
+          echo "EC2_HOST: ${{ secrets.EC2_HOST }}"
+          echo "EC2_USER: ${{ secrets.EC2_USER }}"
+
+      - name: Test SSH Connection
+        timeout-minutes: 2
+        run: |
+          echo "🔍 SSH 연결 테스트 중..."
+          echo "EC2_HOST: ${{ secrets.EC2_HOST }}"
+          echo "EC2_USER: ${{ secrets.EC2_USER }}"
+          echo "타임아웃: 60초"
+          echo ""
+          
+          # 연결 테스트 (타임아웃 60초)
+          if ssh -o ConnectTimeout=60 -o StrictHostKeyChecking=no -o ServerAliveInterval=10 -i ~/.ssh/deploy_key ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} echo "✅ SSH 연결 성공" 2>&1; then
+            echo "✅ SSH 연결 테스트 통과"
+          else
+            echo ""
+            echo "❌ SSH 연결 실패"
+            echo ""
+            echo "🔧 즉시 확인할 사항:"
+            echo ""
+            echo "1. EC2 인스턴스 상태 확인"
+            echo "   - AWS 콘솔 > EC2 > 인스턴스가 'running' 상태인지 확인"
+            echo ""
+            echo "2. 보안 그룹 설정 확인"
+            echo "   - AWS 콘솔 > EC2 > 보안 그룹 > 인바운드 규칙"
+            echo "   - 포트 22 (SSH) 규칙이 있어야 함"
+            echo "   - 소스: 0.0.0.0/0 또는 특정 IP 범위"
+            echo ""
+            echo "3. 공개 IP 주소 확인"
+            echo "   - AWS 콘솔 > EC2 > 인스턴스 > 네트워킹 탭"
+            echo "   - 공개 IPv4 주소를 확인하고 GitHub Secrets의 EC2_HOST와 비교"
+            echo ""
+            echo "4. 로컬에서 SSH 연결 테스트"
+            echo "   ssh -i ~/.ssh/your_key.pem ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}"
+            echo "   (로컬에서도 연결이 안 되면 EC2 설정 문제입니다)"
+            echo ""
+            exit 1
+          fi
 
       - name: Deploy to EC2
         run: |
