--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -3,8 +3,8 @@ FROM eclipse-temurin:21-jre-alpine
 
 WORKDIR /app
 
-# 빌드된 JAR 파일 복사 (GitHub Actions에서 이미 빌드됨)
-COPY build/libs/*.jar app.jar
+# 빌드된 JAR 파일 복사 (배포 스크립트에서 app.jar로 복사됨)
+COPY app.jar app.jar
 
 # 포트 노출
 EXPOSE 8080
