--- a/backend/.dockerignore
+++ b/backend/.dockerignore
@@ -8,6 +8,7 @@
 
 # Build artifacts
 # build - 프로덕션 Dockerfile에서 사용하므로 제외하지 않음
+# app.jar - 프로덕션 Dockerfile에서 사용하므로 제외하지 않음
 .gradle
 
 # Environment files
