--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -23,7 +23,7 @@ server {
 
     # API 프록시 설정 (필요한 경우)
     location /api/ {
-    proxy_pass http://backend:8080/;
+    proxy_pass http://cinecollector-backend:8080/;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection 'upgrade';
@@ -31,5 +31,4 @@ server {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
-    }
 }
